crates/keron-lang/tests/corpus/errors/check/double_to_int.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Int`, found `Double`
  --> 1:14
  |
1 | val n: Int = 1.5
  |              ^^^
